// Generated file
import "ccsds_mal/types.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus018ConfiguredObcp {
extensions 11 to 111;

  optional ccsds_mal.protobuf.UINTEGER id = 1;
  optional ccsds_mal.protobuf.STRING hkParamNameForName = 2;
  optional ccsds_mal.protobuf.STRING hkParamNameForId = 3;
  optional ccsds_mal.protobuf.STRING hkParamNameForStatus = 4;
  optional ccsds_mal.protobuf.STRING hkParamNameForPriority = 5;
  optional ccsds_mal.protobuf.STRING hkParamNameForStepId = 6;
  optional ccsds_mal.protobuf.UINTEGER status = 7;
  optional ccsds_mal.protobuf.UINTEGER stepId = 8;
  optional ccsds_mal.protobuf.UINTEGER priority = 9;
  optional pusGroundModel.protobuf.PusElement pusElement = 10;
}
